# app/Api/V1/Controllers/CategoryController.php
@@ -16,6 +16,39 @@ class CategoryController extends Controller
         $this->categoryRepository = $categoryRepository;
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/categories",
+     *      tags={"Category"},
+     *      security={{"bearerAuth":{}}},
+     *      summary="Get all gatecories",
+     *      description="Returns categories",
+     *      @OA\Response(
+     *          response=200,
+     *          description="ok",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      ),
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *      ),
+     * @OA\Response(
+     *      response=400,
+     *      description="Bad Request",
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found",
+     *   ),
+     *  )
+     *
+     */
     public function getAllCategories(Request $request)
     {
         $categories = $this->categoryRepository->getCategories();
