# app/Api/V1/Controllers/UserAuthorController.php
@@ -12,8 +12,18 @@ use MarcinOrlowski\ResponseBuilder\ResponseBuilder;
 class UserAuthorController extends Controller
 {
     /**
-     * Display a listing of the resource.
      *
+     * @OA\Get(
+     *   path="/api/user-authors",
+     *   summary="list all user-author records",
+     *   tags={"Author"},
+     *
+     *   @OA\Response(response=200, description="successful operation"),
+     *   @OA\Response(response=403, description="Forbidden"),
+     *   @OA\Response(response=404, description="Not found"),
+     *   security={{"bearerAuth":{}}}
+     *
+     * )
      * @return \Symfony\Component\HttpFoundation\Response
      */
     public function index()
@@ -33,8 +43,23 @@ class UserAuthorController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
      *
+     * @OA\Post(
+     *   path="/api/user-authors",
+     *   summary="Add user-author",
+     *   tags={"Author"},
+     *  @OA\RequestBody(
+     *         required=true,
+     *         description="user-author object",
+     *         @OA\JsonContent(ref="#/components/schemas/UserAuthorRequest")
+     *     ),
+     *   @OA\Response(response=200, description="successful operation"),
+     *   @OA\Response(response=400, description="Validation errors"),
+     *   @OA\Response(response=401, description="Unauthenticated"),
+     *   @OA\Response(response=403, description="Forbidden"),
+     *   security={{"bearerAuth":{}}}
+     *
+     * )
      * @param  \Illuminate\Http\Request  $request
      * @return \Symfony\Component\HttpFoundation\Response
      */
@@ -64,9 +89,31 @@ class UserAuthorController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
      *
-     * @param  \App\Models\UserAuthor  $userAuthor
+     * @OA\Delete(
+     *   path="/api/user-authors/{id}",
+     *   summary="delete user-authors record",
+     *   tags={"Author"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="user-author id"
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="user-author object",
+     *         @OA\Parameter(name="auser_author_id"),
+     *     ),
+     *   @OA\Response(response=200, description="successful operation"),
+     *   @OA\Response(response=400, description="Validation errors"),
+     *   @OA\Response(response=401, description="Unauthenticated"),
+     *   @OA\Response(response=403, description="Forbidden"),
+     *   security={{"bearerAuth":{}}}
+     *
+     * )
+     * @param Request $request
+     * @param $id
      * @return \Symfony\Component\HttpFoundation\Response
      */
     public function destroy($id)
