# app/Api/V1/Controllers/UserSourceController.php
@@ -12,8 +12,18 @@ use MarcinOrlowski\ResponseBuilder\ResponseBuilder;
 class UserSourceController extends Controller
 {
     /**
-     * Display a listing of the resource.
      *
+     * @OA\Get(
+     *   path="/api/user-sources",
+     *   summary="list all user-source records",
+     *   tags={"Source"},
+     *
+     *   @OA\Response(response=200, description="successful operation"),
+     *   @OA\Response(response=403, description="Forbidden"),
+     *   @OA\Response(response=404, description="Not found"),
+     *   security={{"bearerAuth":{}}}
+     *
+     * )
      * @return \Symfony\Component\HttpFoundation\Response
      */
     public function index()
@@ -33,8 +43,23 @@ class UserSourceController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
      *
+     * @OA\Post(
+     *   path="/api/user-sources",
+     *   summary="Add user-source",
+     *   tags={"Source"},
+     *  @OA\RequestBody(
+     *         required=true,
+     *         description="user-source object",
+     *         @OA\JsonContent(ref="#/components/schemas/UserSourceRequest")
+     *     ),
+     *   @OA\Response(response=200, description="successful operation"),
+     *   @OA\Response(response=400, description="Validation errors"),
+     *   @OA\Response(response=401, description="Unauthenticated"),
+     *   @OA\Response(response=403, description="Forbidden"),
+     *   security={{"bearerAuth":{}}}
+     *
+     * )
      * @param  \Illuminate\Http\Request  $request
      * @return \Symfony\Component\HttpFoundation\Response
      */
@@ -64,9 +89,31 @@ class UserSourceController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
      *
-     * @param  \App\Models\UserAuthor  $userAuthor
+     * @OA\Delete(
+     *   path="/api/user-sources/{id}",
+     *   summary="delete user-source record",
+     *   tags={"Source"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="user-sources id"
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="user-sources object",
+     *         @OA\Parameter(name="auser_source_id"),
+     *     ),
+     *   @OA\Response(response=200, description="successful operation"),
+     *   @OA\Response(response=400, description="Validation errors"),
+     *   @OA\Response(response=401, description="Unauthenticated"),
+     *   @OA\Response(response=403, description="Forbidden"),
+     *   security={{"bearerAuth":{}}}
+     *
+     * )
+     * @param Request $request
+     * @param $id
      * @return \Symfony\Component\HttpFoundation\Response
      */
     public function destroy($id)
